# aw-notify

./: .gitignore  Makefile  README.md  aw-notify.spec  pyproject.toml
.github/workflows/: build.yml
aw_notify/: __main__.py  main.py  observable.py  observer.py  utils.py
